# chess

./: .gitignore  Board-qt.cpp  Board-qt.h  Board-sfml.cpp  Board-sfml.h  Board.cpp  Board.h  BoardBase.h  BoardBase.hpp  CMakeLists.txt  Game.cpp  Game.h  Piece.cpp  Piece.h  Player.cpp  Player.h  QtGame.cpp  QtGame.h  README.md  feedback.md  main-qt.cpp  main-sfml.cpp  main.cpp  struct.h
chess/: CMakeLists.txt  main.cpp
chess/common/: function.cpp  function.h  struct.h
chess/controller/: QtGame.cpp  QtGame.h
chess/logic/: Bishop.cpp  Bishop.h  CheckChess.cpp  CheckChess.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
chess/view/: Board.cpp  Board.h  BoardBase.h  GameMode.cpp  GameMode.h  GameMode.hpp  IBoard.cpp  IBoard.h  IBoard.hpp  InterfaceModeState.h  InterfaceModeState.hpp  PersonnalisationMode.cpp  PersonnalisationMode.h  PersonnalisationMode.hpp  Piece.cpp  Piece.h  StateFactory.h  StateFactory.hpp
common/: fuction.cpp  fuction.h  function.cpp  function.h  struct.h
controller/: QtGame.cpp  QtGame.h
docs/: Doxyfile  build_docs.sh  conf.py  index.rst
logic/: Bishop.cpp  Bishop.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
sfml/: BoardBase.h  CMakeLists.txt  Game.cpp  Piece.cpp  Piece.h  Player.cpp  Player.h  QtGame.cpp  QtGame.h  README.md  main.cpp  struct.h
tests/: CMakeLists.txt  logic-tests.cpp
view/: Board.cpp  Board.h  BoardBase.h
